# blurthing

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: LICENSE
assets/icon/: icon.icns
blurthing/: Cargo.toml  build.rs
blurthing/src/: application.rs  history.rs  main.rs  message.rs  parameters.rs  state.rs  utils.rs
blurthing/src/styles/: application.rs  button.rs  container.rs  mod.rs  scrollable.rs  slider.rs  text.rs  text_input.rs
blurthing/src/widgets/: mod.rs
src/: application.rs  main.rs  message.rs  parameters.rs
xtask/: Cargo.toml
xtask/src/: args.rs  bundle.rs  main.rs  utils.rs
