[package]
name = "blurthing"
version = "1.1.0"
edition = "2021"
authors = ["Tommaso Dimatore <sonodimaa@icloud.com>"]
description = "Simplify the process of computing BlurHashes from images."
homepage = "https://github.com/sonodima/blurthing"
repository = "https://github.com/sonodima/blurthing"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
blurhash = "0.2"
iced = { version = "0.12", features = ["image"] }
image = "0.25"
log = { workspace = true }
native-dialog = "0.7"
webbrowser = "1.0"

[package.metadata.bundle]
name = "BlurThing"
identifier = "com.sonodima.BlurThing"
icon = ["assets/icon/*.png"]
category = "Graphics and Design"
