[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
cargo_toml = "0.20"
log = { workspace = true }
pico-args = "0.5"
serde = { version = "1.0", features = ["derive"] }
# Use the `tauri-bundler` crate from the Tauri repository because it already includes
# the new macOS' hardened runtime configuration flags.
# TODO: switch back to crates.io when the tauri-bundler crate is updated.
tauri-bundler = { git = "https://github.com/tauri-apps/tauri", branch = "1.x" }
# tauri-bundler = "1.6"
